--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
@@ -1,8 +1,7 @@
-<section class="user-mgmt" ng-controller="AdminCtrlr" ng-init="load()">
-
+<section class="user-mgmt" ng-controller="BibliotecaCtrlr" ng-init="load()">
   <table class="table table-striped table-hover">
     <caption>
-      Usuários
+      Itens do Acervo
       | <a class="btn btn-xs btn-primary" href="#/admin/usuario/new">
         <span class="glyphicon glyphicon-certificate"></span> Novo
       </a>
@@ -10,7 +9,7 @@
     <thead>
       <tr>
         <th>
-            Usuário</th>
+            Item</th>
         <th style="width: 8rem;">
             Ações</th>
       </tr>
@@ -18,20 +17,20 @@
     <tfoot>
     </tfoot>
     <tbody>
-      <tr ng-repeat="user in users">
+      <tr ng-repeat="item in itens">
         <td>
           <div>
-            &#35;{{user.id}} - <strong>{{user.nome}}</strong>
+            &#35;{{item.id}} - <strong>{{item.titulo}}</strong>
           </div>
           <div>
             <small>
-              {{user.cpfFormatado}} :: <em>{{user.endereco}}</em>
+              {{item.autor}} :: <em>{{item}}</em>
             </small>
           </div>
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="\#{{rootPath}}/{{user.id}}">
+            <a class="btn btn-sm btn-primary" href="#{{rootPath}}/{{user.id}}">
               <span class="glyphicon glyphicon-pencil"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -39,7 +38,7 @@
             </a>
             <ul class="dropdown-menu pull-right">
               <li>
-                <a class="" href="\#{{rootPath}}" ng-click="delete(user.id)">
+                <a class="" href="#{{rootPath}}" ng-click="delete(user.id)">
                   <span class="glyphicon glyphicon-remove"></span> Deletar
                 </a>
               </li>
