--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -2,25 +2,28 @@
 <html ng-app="biblioteca">
 <head>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<meta name="author" content="José Nascimento &lt;joseaugustodearaujonascimento@gmail.com&gt;">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="author" content="José Nascimento &lt;joseaugustodearaujonascimento@gmail.com&gt;">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>:: Sistema de Gerenciamento de Bibliotecas ::</title>
+  <title>:: Sistema de Gerenciamento de Bibliotecas ::</title>
 
-<link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-<link href="styles/main.css" rel="stylesheet" type="text/css">
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
 
-<script src="assets/jquery/dist/jquery.min.js" type="text/javascript"></script>
-<script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="assets/jquery/dist/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
 
-<script src="assets/angular/angular.min.js" type="text/javascript"></script>
-<script src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="scripts/admin.controller.js" type="text/javascript"></script>
+  <script src="assets/angular/angular.min.js" type="text/javascript"></script>
+  <script src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
 
+  <script src="scripts/biblioteca.module.js" type="text/javascript"></script>
+<!--   <script src="scripts/admin/controller.js" type="text/javascript"></script> -->
+  <script src="scripts/admin/usuario.controller.js"></script>
 </head>
 <body>
   <div class="container">
@@ -44,10 +47,12 @@
               </a>
               <ul class="dropdown-menu" role="menu">
                 <li>
-                  <a href="javascript:void(0);">
+                  <a href="#/biblioteca/">
                     <span class="glyphicon glyphicon-th-list"></span> Consultar Acervo</a>
                 </li>
-                <li><a href="javascript:void(0);">Ver usuários</a></li>
+                <li>
+                  <a href="#/admin/usuario/">Ver usuários</a>
+                </li>
                 <li class="divider"></li>
                 <li><a href="javascript:void(0);">Separated link</a></li>
                 <li class="divider"></li>
