--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
@@ -1,9 +1,15 @@
-<div class="well">
-  <form class="form-horizontal" action="javascript:void(0);"
-    method="post" ng-submit="save()" ng-controller="BibliotecaCtrlr"
-    ng-init="edit(params.id)">
+<div class="well" ng-controller="BibliotecaCtrlr">
+  <ol class="breadcrumb">
+    <li>
+      <a href="javascript:void(0);">Biblioteca</a></li>
+    <li>
+      <a href="#{{rootPath}}">Unidades</a></li>
+    <li class="active">
+      {{data.id > 0 ? 'Detalhes' : 'Nova'}}</li>
+  </ol>
+  <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save()" ng-init="edit(params.id)">
     <fieldset>
-      <legend>Cadastro de Usuário</legend>
+      <legend>Cadastro de Unidades</legend>
       <input type="hidden" name="id" ng-model="data.id">
       <div class="form-group">
         <div class="col-lg-12">
@@ -14,23 +20,26 @@
       </div>
       <div class="form-group">
         <div class="col-lg-12">
-          <label class="control-label">CPF</label>
-          <input class="form-control cpf-input" name="cpf" type="text" maxlength="14" ng-model="data.cpf" required> 
-        </div>
-      </div>
-      <!-- <div> -->
-      <!--   <label> Tipo:<select ng-model="data.tipo"> -->
-      <!--       <option value="" selected disabled hidden>-- -->
-      <!--         SELECIONE O TIPO --</option> -->
-      <!--       <option value="COMUM">Usuário Comum</option> -->
-      <!--       <option value="ADMIN">Administrador</option> -->
-      <!--   </select> -->
-      <!--   </label> -->
-      <!-- </div> -->
-      <div class="form-group">
-        <div class="col-lg-12">
           <label class="control-label"> Endereço</label> <input
             class="form-control" ng-model="data.endereco">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-lg-12">
+          <label class="control-label"> Validade das Reservas (em dias)</label>
+          <input class="form-control" ng-model="data.qteDiasValidadeReserva">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-lg-12">
+          <label class="control-label"> Validade das Locações (em dias)</label>
+          <input class="form-control" ng-model="data.qteDiasLocacao">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-lg-12">
+          <label class="control-label"> Multa</label>
+          <input class="form-control" ng-model="data.multaDiaria">
         </div>
       </div>
       <div class="form-group">
