--- a/poo-library-app-web/src/main/webapp/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/usuario/index.html
@@ -2,7 +2,7 @@
   <table class="table table-striped table-hover">
     <caption>
       Usuários
-      | <a class="btn btn-xs btn-primary" href="#/admin/usuario/new">
+      | <a class="btn btn-xs btn-primary" href="#{{rootPath}}/new">
         <span class="glyphicon glyphicon-certificate"></span> Novo
       </a>
     </caption>
@@ -38,7 +38,7 @@
             </a>
             <ul class="dropdown-menu pull-right">
               <li>
-                <a class="" href="#{{rootPath}}" ng-click="delete(item.id)">
+                <a class="" href="#{{rootPath}}" ng-click="remove(item.id)">
                   <span class="glyphicon glyphicon-remove"></span> Deletar
                 </a>
               </li>
