--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -22,8 +22,12 @@
   <script src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
 
   <script src="scripts/biblioteca.module.js" type="text/javascript"></script>
-<!--   <script src="scripts/admin/controller.js" type="text/javascript"></script> -->
+  <script src="scripts/crud.controller.js" type="text/javascript"></script>
+
+  <script src="scripts/admin/controller.js" type="text/javascript"></script>
   <script src="scripts/admin/usuario.controller.js"></script>
+  <script src="scripts/admin/biblioteca.controller.js"></script>
+
 </head>
 <body>
   <div class="container">
@@ -35,7 +39,7 @@
               class="icon-bar"></span> <span class="icon-bar"></span> <span
               class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#/">
             <span class="glyphicon glyphicon-book"></span> SGLiB
           </a>
         </div>
@@ -48,39 +52,44 @@
               <ul class="dropdown-menu" role="menu">
                 <li>
                   <a href="#/biblioteca/">
-                    <span class="glyphicon glyphicon-th-list"></span> Consultar Acervo</a>
+                    <span class="glyphicon glyphicon-th-list"></span> Acervo</a>
                 </li>
                 <li>
-                  <a href="#/admin/usuario/">Ver usuários</a>
+                  <a href="#/admin/usuario/">
+                    <span class="glyphicon glyphicon-user"></span> Usuários</a>
                 </li>
                 <li class="divider"></li>
-                <li><a href="javascript:void(0);">Separated link</a></li>
+                <li>
+                  <a href="#/admin/biblioteca">
+                    <span class="glyphicon glyphicon-bookmark"></span> Unidades</a>
+                </li>
                 <li class="divider"></li>
                 <li><a href="javascript:void(0);">One more separated link</a></li>
               </ul>
             </li>
             <li class="">
-              <a href="javascript:void(0);">Empréstimos</a>
+              <a href="javascript:void(0);">
+                <span class="glyphicon glyphicon-calendar"></span> Empréstimos</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Reservas</a>
+              <a href="javascript:void(0);">
+                <span class="glyphicon glyphicon-saved"></span> Reservas</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                <span class="glyphicon glyphicon-user"></span> Primeiro Nome <span class="caret"></span></a>
+                <span class="glyphicon glyphicon-user"></span> Augusto
+                <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="javascript:void(0);">Ver reservas</a></li>
-                <li><a href="javascript:void(0);">Ver usuários</a></li>
                 <li class="divider"></li>
                 <li>
-                  <a href="javascript:void(0);">
+                  <a href="#/settings">
                     <span class="glyphicon glyphicon-cog"></span> Configurações</a>
                 </li>
                 <li class="divider"></li>
                 <li>
-                  <a href="javascript:void(0);">
+                  <a href="#/logout">
                     <span class="glyphicon glyphicon-log-out"></span> Sair</a>
                 </li>
               </ul>
