adicionado indicador de carregando

--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -20,6 +20,10 @@
 
   <script src="assets/angular/angular.min.js" type="text/javascript"></script>
   <script src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+
+  <link rel="stylesheet" href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all" />
+  <script type="text/javascript" src="assets/angular-loading-bar/build/loading-bar.min.js"></script>
 
   <script src="scripts/biblioteca.module.js" type="text/javascript"></script>
   <script src="scripts/crud.controller.js" type="text/javascript"></script>
