--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="biblioteca">
+<html>
 <head>
 
   <meta charset="UTF-8">
@@ -10,27 +10,8 @@
   <title>:: Sistema de Gerenciamento de Bibliotecas ::</title>
 
   <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
-
+  <link href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" rel="stylesheet" media="all">
   <link href="styles/main.css" rel="stylesheet" type="text/css">
-
-  <script src="assets/jquery/dist/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
-
-  <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  <script src="assets/angular/angular.min.js" type="text/javascript"></script>
-  <script src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
-  <script src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
-
-  <link rel="stylesheet" href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all" />
-  <script type="text/javascript" src="assets/angular-loading-bar/build/loading-bar.min.js"></script>
-
-  <script src="scripts/biblioteca.module.js" type="text/javascript"></script>
-  <script src="scripts/crud.controller.js" type="text/javascript"></script>
-
-  <script src="scripts/admin/controller.js" type="text/javascript"></script>
-  <script src="scripts/admin/usuario.controller.js"></script>
-  <script src="scripts/admin/biblioteca.controller.js"></script>
 
 </head>
 <body>
@@ -102,7 +83,63 @@
         </div>
       </div>
     </nav>
-    <div ng-view></div>
+    <div ng-view>
+      <strong>Carregando...</strong>
+    </div>
   </div>
+
+  <script>
+    function bootstrap() {
+
+      var queue = [];
+
+      $('script[data-src]').each(function() {
+
+        var $this = $(this);
+
+        queue.push($.Deferred().done(function() {
+
+          console.log($this.data('src'));
+
+          $this.load(function() {
+
+            if (queue.length > 0) {
+
+              queue.shift().resolve();
+            } else {
+
+              $(document).prop('ng-app', "biblioteca");
+
+              angular.bootstrap(document, ['biblioteca']);
+            }
+          });
+
+          $this.prop('src', $this.data('src'));
+
+        }));
+      });
+
+      queue.shift().resolve();
+    }
+  </script>
+
+  <script onload="bootstrap()" src="assets/jquery/dist/jquery.min.js" type="text/javascript" defer></script>
+
+  <script data-src="assets/jquery.inputmask/dist/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
+
+  <script data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+
+  <script data-src="assets/angular/angular.min.js" type="text/javascript"></script>
+  <script data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script data-src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+
+  <script data-src="assets/angular-loading-bar/build/loading-bar.min.js" type="text/javascript"></script>
+
+  <script data-src="scripts/biblioteca.module.js" type="text/javascript"></script>
+  <script data-src="scripts/crud.controller.js" type="text/javascript"></script>
+
+  <script data-src="scripts/admin/controller.js" type="text/javascript"></script>
+  <script data-src="scripts/admin/usuario.controller.js" type="text/javascript"></script>
+  <script data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
 </body>
 </html>
