--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
@@ -1,4 +1,4 @@
-<section class="user-mgmt" ng-controller="BibliotecaCtrlr" ng-init="load()">
+<section ng-controller="BibliotecaCtrlr" ng-init="load()">
   <table class="table table-striped table-hover">
     <caption>
       Bibliotecas
