--- a/poo-library-app-web/src/main/webapp/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/usuario/index.html
@@ -1,4 +1,4 @@
-<section class="user-mgmt" ng-controller="UsuarioCtrlr" ng-init="load()">
+<section ng-controller="UsuarioCtrlr" ng-init="load()">
   <table class="table table-striped table-hover">
     <caption>
       Usuários
