--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/edit.html
@@ -1,63 +1,63 @@
-<div class="well" ng-controller="BibliotecaCtrlr">
+<div>
   <ol class="breadcrumb">
     <li>
-      <a href="javascript:void(0);">Biblioteca</a></li>
+      <a href="#/">Início</a></li>
     <li>
       <a href="#{{rootPath}}">Unidades</a></li>
     <li class="active">
       {{data.id > 0 ? 'Detalhes' : 'Nova'}}</li>
   </ol>
-  <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save()" ng-init="edit(params.id)">
-    <fieldset>
-      <legend>Cadastro de Unidades</legend>
-      <input type="hidden" name="id" ng-model="data.id">
-      <div class="form-group">
-        <div class="col-lg-12">
-          <label class="control-label"> Nome </label> <input
-            class="form-control" name="nome" type="text"
-            ng-model="data.nome" required autofocus>
+  <div class="well">
+    <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save()" ng-init="edit(params.id)">
+      <fieldset>
+        <legend>Cadastro de Unidades</legend>
+        <input type="hidden" name="id" ng-model="data.id">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Nome</label>
+            <input class="form-control" name="nome" type="text" ng-model="data.nome" required autofocus>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-12">
-          <label class="control-label"> Endereço</label> <input
-            class="form-control" ng-model="data.endereco">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Endereço</label>
+            <input class="form-control" ng-model="data.endereco" required>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-12">
-          <label class="control-label"> Validade das Reservas (em dias)</label>
-          <input class="form-control" ng-model="data.qteDiasValidadeReserva">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Validade das Reservas (em dias)</label>
+            <input class="form-control" ng-model="data.qteDiasValidadeReserva" required>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-12">
-          <label class="control-label"> Validade das Locações (em dias)</label>
-          <input class="form-control" ng-model="data.qteDiasLocacao">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Validade das Locações (em dias)</label>
+            <input class="form-control" ng-model="data.qteDiasLocacao" required>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-12">
-          <label class="control-label"> Multa</label>
-          <input class="form-control" ng-model="data.multaDiaria">
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Multa</label>
+            <input class="form-control" ng-model="data.multaDiaria" required>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-12 modal-footer">
-          <button class="btn btn-sm btn-default" type="reset"
-            ng-click="cancel()">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            Voltar
-          </button>
-          <!-- <button class="btn btn-warning" type="reset" -->
-          <!--   ng-click="void()"> -->
-          <!--   <span class="glyphicon glyphicon-trash"></span> Limpar -->
-          <!-- </button> -->
-          <button class="btn btn-sm btn-primary" type="submit">
-            <span class="glyphicon glyphicon-floppy-disk"></span> Salvar
-          </button>
+        <div class="form-group">
+          <div class="col-lg-12 modal-footer">
+            <button class="btn btn-sm btn-default" type="reset" ng-click="cancel()">
+              <span class="glyphicon glyphicon-chevron-left"></span> Voltar
+            </button>
+            <button class="btn btn-sm btn-primary" type="submit">
+              <span class="glyphicon glyphicon-floppy-disk"></span> Salvar
+            </button>
+          </div>
         </div>
-      </div>
-    </fieldset>
-  </form>
+      </fieldset>
+    </form>
+  </div>
 </div>
