--- a/poo-library-app-web/src/main/webapp/admin/usuario/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/usuario/edit.html
@@ -8,30 +8,31 @@
           showMaskOnFocus: false, });
   });
 </script>
+<ol class="breadcrumb">
+  <li>
+    <a href="#/">Início</a></li>
+  <li>
+    <a href="#{{rootPath}}">Usuários</a></li>
+  <li class="active">
+    {{data.id > 0 ? 'Detalhes' : 'Novo'}}</li>
+</ol>
 <div class="well">
-  <ol class="breadcrumb">
-    <li>
-      <a href="javascript:void(0);">Biblioteca</a></li>
-    <li>
-      <a href="#{{rootPath}}">Usuários</a></li>
-    <li class="active">
-      {{data.id > 0 ? 'Detalhes' : 'Novo'}}</li>
-  </ol>
   <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save()" ng-init="edit(params.id)">
     <fieldset>
       <legend>Cadastro de Usuário</legend>
       <input type="hidden" name="id" ng-model="data.id">
       <div class="form-group">
         <div class="col-lg-12">
-          <label class="control-label"> Nome </label> <input
-            class="form-control" name="nome" type="text"
-            ng-model="data.nome" required autofocus>
+          <label class="control-label">
+            Nome</label>
+          <input class="form-control" name="nome" type="text" ng-model="data.nome" required autofocus>
         </div>
       </div>
       <div class="form-group">
         <div class="col-lg-12">
-          <label class="control-label">CPF</label>
-          <input class="form-control cpf-input" name="cpf" type="text" maxlength="14" ng-model="data.cpf" required> 
+          <label class="control-label">
+            CPF</label>
+          <input class="form-control cpf-input" name="cpf" type="text" maxlength="14" ng-model="data.cpf" required>
         </div>
       </div>
       <!-- <div> -->
@@ -45,20 +46,16 @@
       <!-- </div> -->
       <div class="form-group">
         <div class="col-lg-12">
-          <label class="control-label"> Endereço</label> <input
-            class="form-control" ng-model="data.endereco">
+          <label class="control-label">
+            Endereço</label>
+          <input class="form-control" ng-model="data.endereco" required>
         </div>
       </div>
       <div class="form-group">
         <div class="col-lg-12 modal-footer">
           <button class="btn btn-sm btn-default" type="reset" ng-click="cancel()">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            Voltar
+            <span class="glyphicon glyphicon-chevron-left"></span> Voltar
           </button>
-          <!-- <button class="btn btn-warning" type="reset" -->
-          <!--   ng-click="void()"> -->
-          <!--   <span class="glyphicon glyphicon-trash"></span> Limpar -->
-          <!-- </button> -->
           <button class="btn btn-sm btn-primary" type="submit">
             <span class="glyphicon glyphicon-floppy-disk"></span> Salvar
           </button>
