--- a/poo-library-app-web/src/main/webapp/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/usuario/index.html
@@ -1,16 +1,36 @@
 <section ng-controller="UsuarioCtrlr" ng-init="load()">
+  <ol class="breadcrumb">
+    <li>
+      <a href="#/">
+        Início</a></li>
+    <li>
+      Usuários</li>
+  </ol>
+  <div class="btn-group pull-right">
+    <a class="btn btn-sm btn-primary" href="#{{rootPath}}/new">
+      <span class="glyphicon glyphicon-plus"></span> Novo Usuário
+    </a>
+    <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+      <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu pull-right">
+      <li>
+        <a class="" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-remove"></span> Deletar
+        </a>
+      </li>
+      <li class="divider"></li>
+      <li>
+        <a class="" href="javascript:void(0);">
+          Selecionar</a></li>
+    </ul>
+  </div>
   <table class="table table-striped table-hover">
-    <caption>
-      Usuários
-      | <a class="btn btn-xs btn-primary" href="#{{rootPath}}/new">
-        <span class="glyphicon glyphicon-certificate"></span> Novo
-      </a>
-    </caption>
     <thead>
       <tr>
         <th>
             Usuário</th>
-        <th style="width: 8rem;">
+        <th style="width: 8.4rem;">
             Ações</th>
       </tr>
     </thead>
@@ -19,31 +39,38 @@
     <tbody>
       <tr ng-repeat="item in itens">
         <td>
+            <a href="#{{rootPath}}/{{item.id}}">
           <div>
-            &#35;{{item.id}} - <strong>{{item.nome}}</strong>
+              &#35;{{item.id}} - <strong>{{item.nome}}</strong>
           </div>
           <div>
             <small>
               {{item.cpfFormatado}} :: <em>{{item.endereco}}</em>
             </small>
           </div>
+            </a>
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="#{{rootPath}}/{{item.id}}">
-              <span class="glyphicon glyphicon-pencil"></span>
+            <a class="btn btn-sm btn-primary" title="Remover" ng-click="remove(item.id)">
+              <span class="glyphicon glyphicon-remove"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu pull-right">
               <li>
-                <a class="" href="#{{rootPath}}" ng-click="remove(item.id)">
+                <a class="" href="#{{rootPath}}">
                   <span class="glyphicon glyphicon-remove"></span> Deletar
                 </a>
               </li>
               <li class="divider"></li>
-              <li><a class="" href="#">Ver detalhes</a></li>
+              <li>
+                <a class="" href="javascript:void(0);">
+                  Ver locações</a></li>
+              <li>
+                <a class="" href="javascript:void(0);">
+                  Ver reservas</a></li>
             </ul>
           </div>
         </td>
