--- a/poo-library-app-web/src/main/webapp/admin/usuario/edit.html
+++ b/poo-library-app-web/src/main/webapp/admin/usuario/edit.html
@@ -17,7 +17,7 @@
     {{data.id > 0 ? 'Detalhes' : 'Novo'}}</li>
 </ol>
 <div class="well">
-  <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save()" ng-init="edit(params.id)">
+  <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save('/admin/usuario')" ng-init="edit(params.id)">
     <fieldset>
       <legend>Cadastro de Usuário</legend>
       <input type="hidden" name="id" ng-model="data.id">
@@ -53,9 +53,9 @@
       </div>
       <div class="form-group">
         <div class="col-lg-12 modal-footer">
-          <button class="btn btn-sm btn-default" type="reset" ng-click="cancel()">
+          <a class="btn btn-sm btn-default" ng-click="cancel('/admin/usuario')">
             <span class="glyphicon glyphicon-chevron-left"></span> Voltar
-          </button>
+          </a>
           <button class="btn btn-sm btn-primary" type="submit">
             <span class="glyphicon glyphicon-floppy-disk"></span> Salvar
           </button>
