--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -121,6 +121,8 @@
 
   <script class="queued" data-src="assets/angular/angular.min.js" type="text/javascript"></script>
   <script class="queued" data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script class="queued" data-src="assets/angular-resource/angular-resource.min.js" type="text/javascript"></script>
+  
   <script class="queued" data-src="assets/angular-animate/angular-animate.min.js" type="text/javascript"></script>
 
   <script class="queued" data-src="assets/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
@@ -135,5 +137,7 @@
   <script class="queued" data-src="scripts/admin/controller.js" type="text/javascript"></script>
   <script class="queued" data-src="scripts/admin/usuario.controller.js" type="text/javascript"></script>
   <script class="queued" data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
+
+  <script class="queued" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 </body>
 </html>
