--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -9,10 +9,6 @@
 
   <title>:: Sistema de Gerenciamento de Bibliotecas ::</title>
 
-  <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" rel="stylesheet" media="all">
-  <link href="styles/main.css" rel="stylesheet" type="text/css">
-
 </head>
 <body>
   <div class="container">
@@ -90,39 +86,8 @@
     </div>
     </div>
   </div>
-  <script>
-    function queued(e,n,r){var t=[],o=$.Deferred().done(function(){t.shift()});
-    return $(e).each(function(){var e=$(this);t.push($.Deferred().done(function(){
-    e.load(function(){t.length>0&&(o.notify(),t.shift().resolve())}),e.prop("src",
-    e.data("src"))}))}),t.push(o),t.shift().resolve(),o}
 
-    function bootstrap() {
-
-      var APP_NAME = 'biblioteca';
-      var progress = $('progress');
-      var scripts = $('script.queued');
-      var total = scripts.length;
-
-      progress.prop('max', total);
-
-      queued(scripts).progress(function() {
-
-        progress.val(progress.val() + 1);
-
-      }).done(function() {
-
-        console.log('End of queue!');
-
-        $(document).prop('ng-app', APP_NAME);
-
-        angular.bootstrap(document, [APP_NAME]);
-
-        console.log('End of angular bootstrap');
-      });
-    }
-  </script>
-
-  <script onload="bootstrap()" src="assets/jquery/dist/jquery.min.js" type="text/javascript" defer></script>
+  <script id="jquery" src="assets/jquery/dist/jquery.min.js" type="text/javascript" defer></script>
 
   <script class="queued" data-src="assets/angular/angular.min.js" type="text/javascript"></script>
   <script class="queued" data-src="assets/angular-route/angular-route.min.js" type="text/javascript"></script>
@@ -144,5 +109,66 @@
   <script class="queued" data-src="scripts/admin/biblioteca.controller.js" type="text/javascript"></script>
 
   <script class="queued" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
+
+  <script>
+    function queued(e,n,r){var t=[],o=$.Deferred().done(function(){t.shift()});
+    return $(e).each(function(){var e=$(this);t.push($.Deferred().done(function(){
+    e.load(function(){t.length>0&&(o.notify(),t.shift().resolve())}),e.prop("src",
+    e.data("src"))}))}),t.push(o),t.shift().resolve(),o}
+
+    document.getElementById('jquery').addEventListener('load', bootstrap);
+
+    function bootstrap() {
+
+      var APP_NAME = 'biblioteca';
+
+      var progress = $('progress');
+      var scripts = $('script.queued');
+      var total = scripts.length;
+
+      progress.prop('max', total);
+
+      queued(scripts).progress(function() {
+
+        progress.val(progress.val() + 1);
+
+      }).done(function() {
+
+        // console.log('End of queue!');
+
+        $(document).prop('ng-app', APP_NAME);
+
+        angular.bootstrap(document, [APP_NAME]);
+
+        // console.log('End of angular bootstrap');
+      });
+    }
+  </script>
+
+  <!-- 
+    tirado de https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery#example
+   -->
+  <noscript id="deferred-styles">
+    <link href="assets/bootswatch/flatly/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/angular-loading-bar/build/loading-bar.min.css" type="text/css" rel="stylesheet" media="all">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
+  </noscript>
+  <script>
+    var loadDeferredStyles = function() {
+      var addStylesNode = document.getElementById("deferred-styles");
+      var replacement = document.createElement("div");
+      replacement.innerHTML = addStylesNode.textContent;
+      document.body.appendChild(replacement);
+      addStylesNode.parentElement.removeChild(addStylesNode);
+    };
+
+    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+        webkitRequestAnimationFrame || msRequestAnimationFrame;
+
+    if (raf)
+      raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+    else
+      window.addEventListener('load', loadDeferredStyles);
+  </script>
 </body>
 </html>
