organizada página inicial de admins

--- a/poo-library-app-web/src/main/webapp/admin/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/index.html
@@ -1,6 +1,9 @@
 <section ng-controller="AdminCtrlr as ctrlr">
-  <fieldset>
-    <legend>Bem vindo!</legend>
-    <div class="panel">asdhfuashudf</div>
-  </fieldset>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <span class="glyphicon glyphicon-home"></span> Bem vindo!
+    </div>
+    <div class="panel-body">
+    </div>
+  </div>
 </section>
