--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -17,78 +17,11 @@
 </head>
 <body>
   <div class="container">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span> <span
-              class="icon-bar"></span> <span class="icon-bar"></span> <span
-              class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#/">
-            <span class="glyphicon glyphicon-book"></span> SGLiB
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Biblioteca <span
-                  class="caret"></span>
-              </a>
-              <ul class="dropdown-menu" role="menu">
-                <li>
-                  <a href="#/biblioteca/">
-                    <span class="glyphicon glyphicon-th-list"></span> Acervo</a>
-                </li>
-                <li>
-                  <a href="#/admin/usuario/">
-                    <span class="glyphicon glyphicon-user"></span> Usuários</a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a href="#/admin/biblioteca">
-                    <span class="glyphicon glyphicon-bookmark"></span> Unidades</a>
-                </li>
-                <li class="divider"></li>
-                <li><a href="javascript:void(0);">One more separated link</a></li>
-              </ul>
-            </li>
-            <li class="">
-              <a href="javascript:void(0);">
-                <span class="glyphicon glyphicon-calendar"></span> Empréstimos</a>
-            </li>
-            <li>
-              <a href="javascript:void(0);">
-                <span class="glyphicon glyphicon-saved"></span> Reservas</a>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                <span class="glyphicon glyphicon-user"></span> Augusto
-                <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li class="divider"></li>
-                <li>
-                  <a href="#/settings">
-                    <span class="glyphicon glyphicon-cog"></span> Configurações</a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a href="#/logout">
-                    <span class="glyphicon glyphicon-log-out"></span> Sair</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <div ng-view>
-    <div style="margin: auto; width: 20em; text-align: center; padding-top: 10%;">
-      <progress class="main-progress" style="width: 16em; height: 0.4em;" max="100" value="0"></progress>
-      <strong>Carregando...</strong>
-    </div>
+      <div style="margin: auto; width: 20em; text-align: center; padding-top: 10%;">
+        <progress class="main-progress" style="width: 16em; height: 0.4em;" max="100" value="0"></progress>
+        <strong>Carregando...</strong>
+      </div>
     </div>
   </div>
 
@@ -114,47 +47,6 @@
 
   <script class="queued bulk-5" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 
-  <script>
-    (function() {
-
-      function queued(e,n,r){var t=[],o=$.Deferred().done(function(){t.shift()});
-      return $(e).each(function(){var e=$(this);t.push($.Deferred().done(function(){
-      e.load(function(){t.length>0&&(o.notify(),t.shift().resolve())}),e.prop("src",
-      e.data("src"))}))}),t.push(o),t.shift().resolve(),o}function bulk(e){var n=
-      $.Deferred(),r=$(e),t=r.length;return r.each(function(){queued(this).done(
-      function(){t--,n.notify(),0==t&&n.resolve()})}),n.promise()}
-
-      document.getElementById('jquery').addEventListener('load', bootstrap);
-
-      function bootstrap() {
-        var APP_NAME = 'biblioteca';
-
-        var progress = $('progress.main-progress');
-        var scripts = $('script.queued');
-        var total = scripts.length;
-
-        progress.prop('max', total);
-
-        var p = function() {
-          progress.val(progress.val() + 1);
-        };
-
-        var done = function() {
-          $(document).prop('ng-app', APP_NAME);
-          angular.bootstrap(document, [APP_NAME]);
-        };
-
-        bulk('.bulk-1').progress(p).done(function() {
-          bulk('.bulk-2').progress(p).done(function() {
-            bulk('.bulk-3').progress(p).done(function() {
-              bulk('.bulk-4').progress(p).done(function() {
-                bulk('.bulk-5').progress(p).done(done);
-              });
-            });
-          });
-        });
-      }
-    })();
-  </script>
+  <script src="scripts/main.js" type="text/javascript" defer></script>
 </body>
 </html>
