pequenas alteações experimentais

--- a/poo-library-app-web/src/main/webapp/admin/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/index.html
@@ -5,6 +5,12 @@
       <span class="glyphicon glyphicon-home"></span> Bem vindo!
     </div>
     <div class="panel-body">
+      <div class="btn-group">
+        <a class="btn btn-primary" href="#/admin/biblioteca">
+          Bibliotecas</a>
+        <a class="btn btn-primary" href="#/admin/usuario">
+          Usuários</a>
+      </div>
     </div>
   </div>
 </section>
