corrigida remoção de itens de acervo de uma unidade
utilizando deleção de orfãos (orphan-removal do JPA 2.1)

--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/acervo/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/acervo/index.html
@@ -52,7 +52,7 @@
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="#{{url}}/{{item.id}}" ng-click="remove(item.id)">
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" ng-click="remove(item.id)">
               <span class="glyphicon glyphicon-remove"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
