--- a/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/admin/biblioteca/index.html
@@ -57,7 +57,7 @@
             </a>
             <ul class="dropdown-menu pull-right">
               <li>
-                <a class="" href="#{{rootPath}}" ng-click="remove(item.id)">
+                <a class="" href="javascript:void(0);" ng-click="remove(item.id)">
                   <span class="glyphicon glyphicon-remove"></span> Deletar
                 </a>
               </li>
