adicionando ações do usuário

--- a/poo-library-app-web/src/main/webapp/index.html
+++ b/poo-library-app-web/src/main/webapp/index.html
@@ -139,6 +139,9 @@
 
   <script class="queued bulk-5" data-src="scripts/admin/acervo.controller.js" type="text/javascript"></script>
 
+  <script class="queued bulk-5" data-src="scripts/user/controller.js" type="text/javascript"></script>
+  <script class="queued bulk-5" data-src="scripts/user/acervo.controller.js" type="text/javascript"></script>
+
   <script src="scripts/main.js" type="text/javascript" defer></script>
 </body>
 </html>
