adicionada estrutura do perfil do locador

--- a/poo-library-app-web/src/main/webapp/user/index.html
+++ b/poo-library-app-web/src/main/webapp/user/index.html
@@ -1,5 +1,5 @@
 
-<section ng-controller="UserCtrlr">
+<section ng-controller="UserCtrlr as ctrlr">
   <div class="panel panel-default">
     <div class="panel-heading">
       <span class="glyphicon glyphicon-home"></span> Bem vindo!
